[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/UFO Main/enemies/missiles1.png" type="Texture" id=1]
[ext_resource path="res://assets/UFO Main/enemies/missiles2.png" type="Texture" id=2]
[ext_resource path="res://assets/UFO Main/enemies/missiles3.png" type="Texture" id=3]
[ext_resource path="res://actors/enemies/missile/missile.gd" type="Script" id=4]
[ext_resource path="res://assets/UFO Main/enemies/tank_bullet_v5.png" type="Texture" id=5]
[ext_resource path="res://assets/UFO Main/enemies/tank_bullet_v8.png" type="Texture" id=6]
[ext_resource path="res://assets/UFO Main/enemies/tank_bullet_v7.png" type="Texture" id=7]
[ext_resource path="res://assets/UFO Main/enemies/tank_bullet_v6.png" type="Texture" id=8]
[ext_resource path="res://assets/UFO Main/enemies/tank_bullet_v4.png" type="Texture" id=9]
[ext_resource path="res://assets/UFO Main/enemies/tank_bullet_v9.png" type="Texture" id=10]
[ext_resource path="res://assets/sound effects/ship/ship_hit_mixdown.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/UFO Main/light.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 10 ) ],
"loop": false,
"name": "explode",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.04185
height = 37.916

[node name="Missile" type="AnimatedSprite"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
playing = true
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -10, 1 )
rotation = -1.57429
shape = SubResource( 2 )

[node name="free_up_timer" type="Timer" parent="."]
wait_time = 1.5

[node name="explode_timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="explode_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 26, 0 )
scale = Vector2( 2, 2 )
z_index = 2
texture = ExtResource( 12 )
texture_scale = 0.3
color = Color( 0.996078, 1, 0.407843, 1 )
energy = 0.5

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="free_up_timer" to="." method="_on_free_up_timer_timeout"]
[connection signal="timeout" from="explode_timer" to="." method="_on_explode_timer_timeout"]
